Update 11/04/2019 - Fixed badge bug where badges where overlapping in small devices

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -90,3 +90,10 @@ body {
     /* border: 2px solid #2ecc71; */
     font-size: 1rem;
 }
+
+/* will only affect tablets and small devices */
+@media (max-width: 768px) { 
+    .list-group-item .badge {
+        margin-top: 5px;
+    }
+ }
